@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,8 +25,6 @@
 
 package com.sun.javafx.logging;
 
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -54,15 +52,12 @@ class PrintLogger extends Logger {
      * the threshold, then it is logged, otherwise an abbreviated representation including
      * only the time of the pulse is logged.
      */
-    @SuppressWarnings("removal")
-    private static long THRESHOLD = AccessController.doPrivileged((PrivilegedAction<Integer>) () -> Integer.getInteger("javafx.pulseLogger.threshold", 17));
+    private static long THRESHOLD = Integer.getInteger("javafx.pulseLogger.threshold", 17);
 
     /**
      * Optionally exit after a given number of pulses
      */
-    @SuppressWarnings("removal")
-    private static final int EXIT_ON_PULSE =
-            AccessController.doPrivileged((PrivilegedAction<Integer>) () -> Integer.getInteger("javafx.pulseLogger.exitOnPulse", 0));
+    private static final int EXIT_ON_PULSE = Integer.getInteger("javafx.pulseLogger.exitOnPulse", 0);
 
     /**
      * We have a simple counter that keeps track of the current pulse number.
@@ -271,7 +266,7 @@ class PrintLogger extends Logger {
         }
         pulseData.message
             .append("T")
-            .append(Thread.currentThread().getId())
+            .append(Thread.currentThread().threadId())
             .append(" : ")
             .append(message)
             .append("\n");
@@ -315,7 +310,7 @@ class PrintLogger extends Logger {
             if (pulseData != null) {
                 pulseData.message
                     .append("T")
-                    .append(Thread.currentThread().getId())
+                    .append(Thread.currentThread().threadId())
                     .append(" (").append((curPhase.phaseStart-pulseData.startTime)/1000000L)
                     .append(" +").append((curTime - curPhase.phaseStart)/1000000L).append("ms): ")
                     .append(curPhase.phaseName)
